# SoftwareRenderer

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: game.c  game.h  main.c
src/gidreklib/: renderer.c  renderer.h
